# nim-usage-scanner

./: .gitignore  Cargo.toml  README.md
config/: repos.githubonly.yaml  repos.githubonly.yaml.example  repos.yaml
docs/en/: architecture-design.md  implementation-guide.md  nim-detection-analysis.md
docs/zh/: architecture-design.md  implementation-guide.md  nim-detection-analysis.md
scripts/: generate_repos_from_ngc.py
src/: config.rs  git_ops.rs  main.rs  models.rs  ngc_api.rs  report.rs  scanner.rs
