[package]
name = "nim-usage-scanner"
version = "0.1.0"
edition = "2021"
description = "Static code analyzer that scans repositories to discover and catalog NVIDIA NIM usage"
authors = ["NVIDIA"]
license = "Apache-2.0"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Lazy static initialization
once_cell = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Regex matching
regex = "1"

# File traversal (ripgrep core library)
ignore = "0.4"
walkdir = "2"

# Parallel processing
rayon = "1"

# HTTP client for NGC API
reqwest = { version = "0.12", features = ["blocking", "json"] }

# CSV output
csv = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Temporary directory management
tempfile = "3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3